solve vertical align issue

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -464,8 +464,3 @@ left: 0;
 width: 100%;
 height: 100%;
 }
-
-.vcenter {
-    display: flex;
-    align-items: center;
-}
